# water_flow_alarm

./: Cargo.toml
.cargo/: config.toml
server/: pom.xml
server/src/main/java/in/sliya/water_flow_alarm/: Control.java  WaterFlowAlarmApplication.java
server/src/main/resources/: application.properties
server/src/test/java/in/sliya/water_flow_alarm/: WaterFlowAlarmApplicationTests.java
src/: encoder.rs  main.rs
