[package]
name = "water_flow_alarm"
version = "0.1.0"
edition = "2021"



[dependencies]
esp-println = { version = "0.7.1", features = ["log", "esp32c3", "uart", "colors", "critical-section"], default-features = false }
esp-backtrace = { version = "0.9.0", features = ["esp32c3", "print-uart", "panic-handler", "exception-handler" ], default-features = false }
log = "0.4.20"

esp32c3-hal = { version = "0.14.0",  features = ["default",  "embassy-executor-thread", "embassy-time-timg0", "async", "embassy"]}
esp-wifi = { git="https://github.com/esp-rs/esp-wifi", features = [ "embassy-net", "wifi", "esp32c3", "tcp", "dhcpv4"]}
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
embedded-io-async = { version = "0.6.0" }

heapless = { version = "0.7.16", default-features = false }
arrayvec = { version = "0.7.4", default-features = false }

embassy-net = { version = "0.2.1", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-executor = { version = "0.4.0", features = [  "nightly", "arch-riscv32", "integrated-timers", "log"] }
embassy-futures = { version = "0.1.1" }

embassy-time = {version = "0.2.0"}
embedded-hal = {version = "1.0.0-rc.2"}
embedded-hal-async = {version = "1.0.0-rc.2"}
static_cell = {version = "2.0.0", features = ["nightly"]}


[patch.crates-io]
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-net", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d"}
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-time", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d"}
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-executor", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d"}
embassy-executor-macros = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-executor-macros", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d"}
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-sync", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d"}
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-futures", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d"}









